# Geant4_Rango

./: C662Kev_OP.c  CEffectiveAreaOP_root.c  CEffectiveArea_root.c  CEffectiveArea_root_Thick.c  CMakeLists.txt  CTransmission_root.c  ERealTransmission.py  ETransmissionData.py  ETransmissionPlotRealVEx.py  EffectiveArea.py  EffectiveAreaPLComp.py  EffectiveArea_NaI_Tl_OP_100000.txt  EffectiveArea_Thick.py  G4History.macro  README.md  Rango.cc  Test.mac  energyDep.root  thicknessAeff.root  transmission.root  transmissionData.py  vis.mac
100000Runs_Log_OP/: transmission.root
Plots/EffectiveAreaStudies/: EffectiveArea_CdTe.txt  (+7 more)
Rango/: Rango.cc  edepData.py  vis.mac
RealTransmissionData/: Al_1mm_Cd109.mca  Al_2mm_Ba133.mca  Al_2mm_Ba133.txt  Al_2mm_Cd109.mca  Al_2mm_Cd109.txt  Background.txt  NoAl_Ba133.mca  NoAl_Cd109.mca  NoAl_Cd109.txt
include/: ActionInitialization.hh  ColourList.hh  DetectorConstruction.hh  DetectorMessenger.hh  EventAction.hh  MaterialsList.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  RunAction.hh  SteppingAction.hh
macros/: 662keV_Line.mac  AEff_Thick.mac  EffectiveArea_KEdge.mac  EffectiveArea_Lin.mac  EffectiveArea_Log.mac  Simple.mac  SimpleAeff.mac  Transmission.mac  TransmissionNOVIS.mac  TransmissionRealSim.mac  vis.mac
realTransmissionData/: Al_1mm_Ba133.mca  Al_1mm_Ba133.txt  Al_1mm_Cd109.txt  Al_2mm_Ba133.txt:Zone.Identifier  Background.mca  NoAl_Ba133.txt
scripts/: C662Kev_OP.c  CEffectiveAreaOP_root.c  CEffectiveArea_root.c  CEffectiveArea_root_Thick.c  CTransmission_root.c  DetCharacterization.py  ERealTransmission.py  ETransmissionData.py  ETransmissionPLComp.py  ETransmissionPlotRealVEx.py  EffectiveArea.py  EffectiveAreaPLComp.py  EffectiveArea_Thick.py
src/: ActionInitialization.cc  ColourList.cc  DetectorConstruction.cc  DetectorMessenger.cc  EventAction.cc  MaterialsList.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  RunAction.cc  SteppingAction.cc
(+41 files in other folders)
